add image, update readme, use player Id, send player position, update food logic

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="Snake.js"></script>
   <script src="Walls.js"></script>
   <script src="Food.js"></script>
+  <script src="utils.js"></script>
 </body>
 
 </html>
