move websockets logic to its own file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="favicon.png">
 
-  <title>Sketch</title>
+  <title>Multiplayer Snake Game</title>
 
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="libraries/p5.min.js"></script>
@@ -21,6 +21,7 @@
   <script src="Walls.js"></script>
   <script src="Food.js"></script>
   <script src="utils.js"></script>
+  <script src="websockets.js"></script>
 </body>
 
 </html>
